syntax = "proto3";

package manager_auth;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/struct.proto";


message AuthRequest{
  string path = 1[(validate.rules).string = {min_len: 1}];
  string method = 2[(validate.rules).string = {in: ["GET","POST","PUT","DELETE"]}];
}

message AuthReply{
  uint32 userId = 1;
  string userName = 2;
  uint32 roleId = 3;
  string roleKeyword = 4;
  uint32 departmentId = 5;
  string departmentKeyword = 6;
}